# im-a-blind-human

./: .gitignore  NoImNotAHumanAccess.csproj  PLAN.md  README.md  project_status.md
docs/: arrow-surface-seam-proposal.md  character-sprite-mapping-findings.md  feasibility-findings.md  input-and-keyboard.md  native-vs-ual-menus.md  sign-art-rip-findings.md  sign-dialogue-rip-findings.md  world-accessibility-roadmap.md
docs/sign-data/: character_sign_sprites.csv  character_sign_sprites.json  showsign_map.json  sign_dialogue_en.csv  sign_dialogue_en.json
jaws/: README.md
release/: README.md  pack.ps1
src/: AccessMod.cs
src/Dialogue/: DialogueNarrator.cs  DialoguePatches.cs
src/Input/: JawsArrowShim.cs
src/Interop/: Il2CppRaw.cs  UiaEventSuppressor.cs
src/Menus/: ControlDescriber.cs  MenuNarrator.cs
src/Speech/: ISpeechOutput.cs  NativeAnnouncer.cs  UalAnnouncer.cs  UiaNotificationAnnouncer.cs
src/World/: ActionMenu.cs  CartoonButton.cs  CloseUpNarrator.cs  ConsumableNames.cs  ControlsNarrator.cs  CorpseNarrator.cs  FridgeMenu.cs  GameStateAccess.cs  HudNarrator.cs  InputContext.cs  InputModeGate.cs  MenuStepUtil.cs  OrientationNarrator.cs  PhoneMenu.cs  PopupNarrator.cs  RadioMenu.cs  RoomTracker.cs  RoomViewNarrator.cs  ShotNarrator.cs  SignDescriptionCatalog.g.cs  TwoDProbe.cs  (+5 more)
tools/visitor-image-describer/: README.md  generate_csharp_catalog.py  pyproject.toml
tools/visitor-image-describer/src/image_tools/: __init__.py  cli.py  ollama.py  pipeline.py
tools/visitor-image-describer/tests/: test_generate_catalog.py  test_ollama.py  test_pipeline.py
